@@ -1,5 +1,11 @@
 #!/bin/bash
 set -e
+
+mkdir -p ../dist
+mkdir -p ../dist/debian
+mkdir -p ../dist/rhel8
+mkdir -p ../dist/rhel9
+
 export VAGRANT_CWD=$(pwd)/debian/
 vagrant up && vagrant destroy -f
 
